--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -32,9 +32,11 @@
 			flex-grow: 1
 			.flex-container
 				display: flex
+				align-items: center
 				label
 					width: auto
 					padding-right: 12px
+					line-height: 20px
 				input, select
 					flex-grow: 1
 		.field_inst_sending_name
@@ -59,6 +61,16 @@
 		.action-buttons
 			display: block
 			padding: 15px
+		.lang, .work
+			padding-bottom: 10px
+			border-bottom: 1px solid grey
+			display: flex
+			flex-wrap: wrap
+			align-items: center
+			.delete-lang-button, .delete-work-button
+				vertical-align: middle
+		.lang:last-child, .work:last-child
+			border-bottom: none
 .back-to-dashboard
 	display: inline-block
 	width: 100%
@@ -87,3 +99,22 @@
 				width: 100%
 			.field_contact_person, .field_inst_telephone, .field_inst_email
 				width: 100%
+			.lang, .work
+				padding-bottom: 10px
+				border-bottom: 1px solid grey
+				display: flex
+				flex-direction: column
+				align-items: flex-start
+				.field
+					width: 100%
+					&:first-child
+						order: 0
+				.delete-lang-button, .delete-work-button
+					vertical-align: middle
+					align-self: flex-end
+			
+
+@media (max-width: 1100px)
+	.work
+		.field:first-child
+			order: 5
