--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -105,6 +105,8 @@
 				margin-top: -25px
 				.green
 					color: green
+				.orange
+					color: orange
 			.collapsible
 				// display: none
 				height: 0
