--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -80,6 +80,9 @@
 			// flex-grow: 1
 			a
 				display: flex
+				justify-content: flex-end
+				i
+					margin-left: 2px
 		.flex-table-mot-letter
 			width: 6%
 			// order: 5
