--- a/app/assets/stylesheets/student_application_form/progress.sass
+++ b/app/assets/stylesheets/student_application_form/progress.sass
@@ -15,6 +15,10 @@
 	.progress-balls
 		z-index: 1
 		margin-top: -13px
+	a .progress-ball
+		transition: 0.2s all ease-in
+	a:hover .progress-ball
+		transform: scale(1.5)
 	.progress-ball
 		border: 1px solid white
 		background-color: $etsit_blue
