--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -11,10 +11,15 @@
     padding: 7px 18px
     cursor: pointer
     font-size: 18px
+    transition: 0.2s all ease-in
     &:disabled
         color: grey
         cursor: not-allowed
         border-color: grey
+        &:hover
+            transform: scale(1)
+    &:hover
+        transform: scale(0.9)
 .actions
     padding: 10px
 .right
