--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -48,6 +48,8 @@ html
 						border: 1px solid #333
 						height: 22px
 						padding: 5px
+					input[type=checkbox]
+						flex-grow: 0
 					select
 						height: 34px
 						vertical-align: middle
