Label titles & minor changes

--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -38,19 +38,19 @@
 			<div class="field">
 				<div class="flex-container">
 					<input type="checkbox" name="currently_studying" class="language-input" <%=review ? "disabled" : ""%> <%=language.currently_studying ? "checked":"" %> />
-					<label for="currently_studying">Currently Studying</label>
+					<label class="checkBox" for="currently_studying">Currently Studying</label>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
 					<input type="checkbox" name="able_follow_lectures" class="language-input" <%=review ? "disabled" : ""%> <%=language.able_follow_lectures ? "checked":"" %>/>
-					<label for="able_follow_lectures">Able to follow lectures</label>
+					<label class="checkBox" for="able_follow_lectures">Able to follow lectures</label>
 				</div>
 			</div>
 			<div class="field">
 				<div class="flex-container">
 					<input type="checkbox" name="able_follow_lectures_extra_preparation" class="language-input" <%=review ? "disabled" : ""%> <%=language.able_follow_lectures_extra_preparation ? "checked":"" %> />
-					<label for="able_follow_lectures_extra_preparation">Able to follow lectures with extra preparation</label>
+					<label class="checkBox" for="able_follow_lectures_extra_preparation">Able to follow lectures with extra preparation</label>
 				</div>
 			</div>
 			<button type="button" class="delete-lang-button transparent-button small-button">
