--- a/app/views/student_application_form/_sixth_step.erb
+++ b/app/views/student_application_form/_sixth_step.erb
@@ -27,7 +27,7 @@
 <div class="field">
   <div class="flex-container">
     <%= f.check_box :already_study_abroad, autofocus: true, autocomplete: "already_study_abroad", disabled: review %>
-    <%= f.label :already_study_abroad %><br />
+    <%= f.label :already_study_abroad, class: "checkBox" %><br />
   </div>
 </div>
 <div class="field">
