--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -34,9 +34,15 @@
 				display: flex
 				align-items: center
 				label
-					width: auto
+					width: 120px
 					padding-right: 12px
-					line-height: 20px
+					line-height: 1em
+					text-align: right
+				.checkBox
+					text-align: left
+					width: auto
+					padding-left: 12px
+					padding-right: 0
 				input, select
 					flex-grow: 1
 		.field_inst_sending_name
