Added languages list

--- a/app/views/student_application_form/_fourth_step.erb
+++ b/app/views/student_application_form/_fourth_step.erb
@@ -31,6 +31,7 @@
 		<div class="lang">
 			<div class="field">
 				<div class="flex-container">
+					<% languages_list%>
 					<label for="name">Language</label>
 					<input type="text" name="name" class="language-input" <%=review ? "disabled" : ""%> value="<%=language.name%>"/>
 				</div>
