--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -45,7 +45,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, value: @nominated_user.email, autofocus: true, autocomplete: "email"  %>
+    <%= f.email_field :email, value: @nominated_user.email, autofocus: true, disabled: true  %>
   </div>
 
   <div class="field">
