--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -3,14 +3,15 @@
     float: left
 
 .custom-button
-    border-radius: 5px
+    border-radius: 3px
     color: $etsit_blue
     background-color: white
     outline: none
     border: 2px solid $etsit_blue
-    padding: 7px 18px
+    padding: 7px 15px
     cursor: pointer
-    font-size: 18px
+    font-size: 1em
+    margin: 2px
     transition: 0.2s all ease-in
     &:disabled
         color: grey
@@ -20,6 +21,10 @@
             transform: scale(1)
     &:hover
         transform: scale(0.9)
+
+.primary
+    color: white
+    background-color: $etsit_blue
 .actions
     padding: 10px
 .right
