--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -14,6 +14,8 @@
         float: right
         margin-top: -8px
     &.notice
-        background-color: rgba(144,238,185,0.25)
+        background-color: #ebffb0
+        border: 2px solid #92c400
+        color: #92c400
     &.alert
         background-color: rgba(255,218,144,0.15)
