--- a/app/views/users/_user_dashboard_panel.html.erb
+++ b/app/views/users/_user_dashboard_panel.html.erb
@@ -25,7 +25,7 @@
 					<div class="file-name">
 						<%= form.file_field name %>
 					</div>
-					<%= form.submit "Upload", :class => "custom-button" %>
+					<%= form.submit "Upload", :class => "custom-button primary" %>
 				</div>
 				<% end %>
 			<%else%>
