--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -82,7 +82,7 @@
 							Download
 						</button>
 					</a>
-					<a href="<%=student_application_form_path%>"><button class="custom-button" <%=finish_and_uploaded ? "disabled":"" %> >Edit data</button></a>
+					<a href="<%=student_application_form_path%>"><button class="custom-button primary" <%=finish_and_uploaded ? "disabled":"" %> >Edit data</button></a>
 
 					</div>
 				<%end%>
