--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -20,11 +20,17 @@
         &:hover
             transform: scale(1)
     &:hover
-        transform: scale(0.9)
+        transform: scale(1.07)
 
 .primary
     color: white
     background-color: $etsit_blue
+    &:disabled
+        background-color: white
+        color: #9fa8b0
+        border-color: #9fa8b0
+
+
 .actions
     padding: 10px
 .right
