--- a/app/views/users/registration.html.erb
+++ b/app/views/users/registration.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h1 class="title">Complete your personal data</h1>
 
 
 <%= form_for(resource, as: resource_name,  url: user_registration_path) do |f| %>
@@ -62,7 +62,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", :class => "custom-button" %>
+    <%= f.submit "Sign up", :class => "custom-button primary right" %>
   </div>
 <% end %>
 
