--- a/app/assets/stylesheets/flash.sass
+++ b/app/assets/stylesheets/flash.sass
@@ -10,9 +10,8 @@
     &::after
         display: inline-block
         content: '✖'
-        color: $etsit_blue
+        color: #92c400
         float: right
-        margin-top: -8px
     &.notice
         background-color: #ebffb0
         border: 2px solid #92c400
