--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -20,7 +20,7 @@ html
 			margin-top:  2px
 			margin-bottom: 10px
 			font-family: inherit
-			font-weight: 500
+			font-weight: bold
 			line-height: 1.1
 		.hidden
 			display: none
@@ -37,6 +37,18 @@ html
 				min-height: calc(100% - 134px)
 				padding-left: 35px
 				padding-right: 35px
+				.student-application-form
+					height: 100%
+					position: relative
+					width: 100%
+					.action-buttons
+						display: block
+						padding: 0
+						//position: absolute
+						//bottom: 0
+						margin-top: 20px
+						width: 100%
+
 			p.intro-paragraph
 				color: #bbb
 			form
