--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -61,6 +61,7 @@
 			border-radius: 5px
 			border: 2px solid #4664A2
 			background-color: white
+			cursor: pointer
 			i
 				padding: 0
 				color: $etsit_blue 
