--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -1,6 +1,7 @@
 @import "../variables"
 
 .student-application-form
+
 	h1
 		display: inline-block
 		font-size: 22px
@@ -18,6 +19,8 @@
 		.edit_student_application_flex
 			display: flex
 			flex-wrap: wrap
+			min-height: 400px
+			align-content: start
 		.other-languages, .other-work
 			padding: 10px
 		.other-work
