--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -47,7 +47,7 @@
 				<div class="second-container-right">
 					<span class="student-application-form-progress"><%=sap.completed_percentage(is_signed)%></span>
 					<%if finish_app_form %>
-						<span class="check_mark" style="float: none;" title="You must upload your applicatioon form signed in order to complete the progress"><i class="mdi mdi-help orange"></i></span>
+						<span class="check_mark" style="float: none;" title="You must upload your applicatioon form signed in order to complete the progress"><i class="mdi mdi-alert orange"></i></span>
 					<%end%>
 					<%if finish_and_uploaded %>
 						<span class="check_mark" style="float: none;"><i class="mdi mdi-check green"></i></span>
@@ -73,7 +73,7 @@
 				</div>
 				<div class="align-right">
 					<% unless finish_and_uploaded %>
-						<button class="custom-button" type="submit" <%=finish_app_form ? "":"disabled" %> >Upload signed</button>
+						<button class="custom-button" type="submit" <%="disabled" %> id="upload-signed">Upload signed</button>
 					<% else %>
 						<%= button_to "Delete", user_file_delete_url(:id => current_user.id, :attachment => :signed_student_application_form_file_name), :method=> :delete, :class => "custom-button" %>
 					<% end %>
