--- a/app/views/student_application_form/_first_step.html.erb
+++ b/app/views/student_application_form/_first_step.html.erb
@@ -51,7 +51,7 @@
 <div class="field field_inst_telephone">
   <div class="flex-container">
     <%= f.label :inst_telephone, "Telephone" %><br />
-    <%= f.telephone_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone", disabled: review %>
+    <%= f.telephone_field :inst_telephone, autofocus: true, autocomplete: "inst_telephone", disabled: review, pattern: "\+\d*", placeholder: "Include country code (e.g. +34...)", required: true %>
   </div>
 </div>
 
